--- a/config/database.yml
+++ b/config/database.yml
@@ -84,15 +84,15 @@ production:
     database: startups_on_rails_app_production
     username: startups_on_rails_app
     password: <%= ENV["STARTUPS_ON_RAILS_APP_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: startups_on_rails_app_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: startups_on_rails_app_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: startups_on_rails_app_production_cable
-    migrations_paths: db/cable_migrate
+  # cache:
+  #   <<: *primary_production
+  #   database: startups_on_rails_app_production_cache
+  #   migrations_paths: db/cache_migrate
+  # queue:
+  #   <<: *primary_production
+  #   database: startups_on_rails_app_production_queue
+  #   migrations_paths: db/queue_migrate
+  # cable:
+  #   <<: *primary_production
+  #   database: startups_on_rails_app_production_cable
+  #   migrations_paths: db/cable_migrate
